Fix MSVC warning in MathCommon https://bugs.webkit.org/show_bug.cgi?id=271835

Reviewed by Yusuke Suzuki.

In `toIntImpl` a warning, C4334, is emitted because MSVC is implicitly
converting the result of a 32-bit shift to 64-bit. By making an explicit
cast the warning is silenced.

* Source/JavaScriptCore/runtime/MathCommon.h:

Canonical link: https://commits.webkit.org/276799@main